@@ -7,7 +7,8 @@ Revision history for Perl extension IPC::Shareable.
       operation fails
     - Rename _mg_tie() to _magic_tie()
     - Rename _is_kid() to _is_child()
-    -
+    - In IPC::SharedMem, removed leading underscore from object attributes
+
 1.13    2022-10-11
     - In singleton(), do a check whether class was sent in. There was a shifting
       issue if called with IPC::Shareable::singleton() as opposed to
